# ChangeLog for x11-wm/awesome
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/awesome/ChangeLog,v 1.50 2008/12/25 17:05:28 matsuu Exp $

  25 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.1.ebuild,
  awesome-3.1-r1.ebuild:
  Fixed dependency. Removed old revision.

*awesome-3.1-r1 (21 Dec 2008)

  21 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.1-r1.ebuild:
  Fixed dodoc issue, bug #251274.

*awesome-3.1 (13 Dec 2008)

  13 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.1_rc3.ebuild,
  -awesome-3.1_rc4.ebuild, -awesome-3.1_rc5.ebuild, +awesome-3.1.ebuild:
  Version bumped. Removed old versions.

*awesome-3.1_rc5 (05 Dec 2008)

  05 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.1_rc5.ebuild:
  Version bumped.

*awesome-3.1_rc4 (29 Nov 2008)

  29 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.1_rc2.ebuild,
  +awesome-3.1_rc4.ebuild:
  Version bumped. Added x11-misc/habak to RDEPEND.

*awesome-3.1_rc3 (21 Nov 2008)

  21 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> -awesome-3.1_rc1.ebuild,
  +awesome-3.1_rc3.ebuild:
  Version bumped. Removed old version.

*awesome-3.1_rc2 (15 Nov 2008)

  15 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> +awesome-3.1_rc2.ebuild:
  Version bumped. Changed EAPI from 2 to 1.

*awesome-3.1_rc1 (07 Nov 2008)

  07 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> -awesome-2.3.2.ebuild,
  -awesome-3.0.ebuild, +awesome-3.1_rc1.ebuild:
  Version bumped. Removed old versions.

  16 Oct 2008; Markus Meier <maekke@gentoo.org> awesome-2.3.4.ebuild:
  amd64/x86 stable, bug #241858

  14 Oct 2008; Brent Baude <ranger@gentoo.org> awesome-2.3.4.ebuild:
  stable ppc64, bug 241858

  14 Oct 2008; Brent Baude <ranger@gentoo.org> awesome-2.3.4.ebuild:
  stable ppc, bug 241858

*awesome-3.0-r1 (13 Oct 2008)

  13 Oct 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/awesome-3.0-gentoo.patch, +awesome-3.0-r1.ebuild:
  Fixed dependency.
